--- a/ARTechRadar/Base.lproj/Main.storyboard
+++ b/ARTechRadar/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jzb-O2-c7g" userLabel="Restart Button">
                                 <rect key="frame" x="339" y="20" width="20" height="23"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="refresh"/>
                                 <state key="highlighted" image="refreshPressed"/>
                                 <connections>
